--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
-  "version": "0.1.0",
-  "homepage": "https://github.com/raulg-cpp/quote-generator",
+  "version": "0.0.4",
+  "homepage": "https://raulg-cpp.github.io/quote-generator",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
